--- a/NHLWebApi/Web.config
+++ b/NHLWebApi/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -19,7 +19,8 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <connectionStrings>
-    <add name="NhlDb" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=NHL;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+    <add name="NhlDb" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=NHL;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
