--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -51,10 +51,12 @@
     <Compile Include="Interfaces\IDbFactory.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Mapping\PlayerMap.cs" />
+    <Compile Include="Mapping\PlayerStatisticMap.cs" />
     <Compile Include="Mapping\SeasonMapping.cs" />
     <Compile Include="Mapping\TeamDetailStatisticMap.cs" />
     <Compile Include="Mapping\TeamStatisticMapping.cs" />
-    <Compile Include="Infrastructure\DbContext.cs" />
+    <Compile Include="Infrastructure\EfContext.cs" />
     <Compile Include="Mapping\ConferencesMapping.cs" />
     <Compile Include="Mapping\DivisionsMapping.cs" />
     <Compile Include="Mapping\TeamMapping.cs" />
